<resources>
    <string name="app_name">"Alfones Hub"</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="password">Password</string>
    <string name="name">Name e.g(Eugene Orimbo)</string>
    <string name="date_of_birth">Date of birth (YYYY-MM-DD)</string>
    <string name="national_id">National ID (e.g 123456789)</string>
    <string name="phone_number">Phone number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="mpesa_name">Mpesa name</string>
    <string name="mpesa_phone">Mpesa phone</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="basic_info">Basic information</string>
    <string name="contact_info">Contact info</string>
    <string name="mpesa_info">Mpesa info</string>
    <string name="back">BACK</string>
    <string name="save">Save &amp; Next</string>
    <string name="title_activity_register3">RegisterActivity3</string>
    <string name="agreement"><u>Click to read terms &amp; conditions | agreement</u></string>
    <string name="agree">By clicking this, you have understood and agreed to the terms and conditions.</string>
    <string name="discard"><u>Discard &amp; login</u></string>
    <string name="forgot_credentials"><u>Forgot username or password</u></string>
    <string name="title_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="customer_name">Customer name</string>
    <string name="customer_phone">Customer phone</string>
    <string name="customer_national_id">Customer ID</string>
    <string name="product_description">Product description</string>
    <string name="product_quantity">Product quantity</string>
    <string name="product_value">Product value</string>
    <string name="merchandise_quantity">Merchandise quantity</string>
    <string name="customer_comment">Customer comment</string>
    <string name="title_report">Report</string>
    <string name="title_more">More</string>
    <string name="login">Login</string>
    <string name="product_extra_field_1">Extra field 1</string>
    <string name="product_extra_field_2">Extra field 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_activation_expenses">ActivationExpensesActivity</string>
    <string name="product_price">Product price</string>
    <string name="date">Date</string>
    <string name="base_volume">Base volume</string>
    <string name="opening_stock">Opening stock</string>
    <string name="closing_stock">Closing stock</string>

    <!-- MENU -->
    <string name="select_all_fridays">Select All Fridays</string>
    <string name="unselect_all_fridays">Unselect All Fridays</string>
    <string name="select_three_months">Select Prev/Curr/Next Months</string>
    <string name="unselect_three_months">Unselect Prev/Curr/Next Months</string>
    <string name="clear_selections">Clear selections</string>
    <string name="log_selected_days">Log selected days</string>

</resources>
