<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basic_info"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_title"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">


            <EditText
                android:id="@+id/edit_text_register_name"
                android:layout_marginTop="20dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:color/white"
                android:hint="@string/name"/>

            <EditText
                android:id="@+id/edit_text_register_date_of_birth"
                android:layout_marginTop="20dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:color/white"
                android:hint="@string/date_of_birth"/>

            <EditText
                android:id="@+id/edit_text_register_national_id"
                android:layout_marginTop="20dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:color/white"
                android:hint="@string/national_id"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register_1"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="10dp"
                android:padding="12dp"
                android:text="@string/save"
                android:textColor="@android:color/white"
                android:background="@drawable/round_button"/>

            <TextView
                android:id="@+id/btn_discard_login"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@android:color/white"
                android:text="@string/discard"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>