<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mpesa_info"
            android:textColor="@android:color/white"
            android:textSize="@dimen/slide_title"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="56dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">
            <EditText
                android:id="@+id/edit_text_register_mpesa_name"
                android:layout_marginTop="20dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:color/white"
                android:hint="@string/mpesa_name"/>

            <EditText
                android:id="@+id/edit_text_register_mpesa_phone"
                android:layout_marginTop="20dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@android:color/white"
                android:hint="@string/mpesa_phone"/>

            <TextView
                android:id="@+id/btn_terms_condition"
                android:layout_marginTop="20dp"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@android:color/white"
                android:text="@string/agreement"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/checkbox_terms"
                    android:buttonTint="#d9450b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:text="@string/agree" />
            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register_3"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="10dp"
                android:padding="12dp"
                android:text="REGISTER"
                android:textColor="@android:color/white"
                android:background="@drawable/round_button"/>

            <TextView
                android:id="@+id/btn_login"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@android:color/white"
                android:text="@string/discard"/>


        </LinearLayout>


    </LinearLayout>
</LinearLayout>
