<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".reports.fragments.OutletSalesFragment"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:textColor="@android:color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Outlet sales"/>

                    <View
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:alpha=".5"
                        android:background="#325775" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_spinner"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="0dp">
                        <com.jaredrummler.materialspinner.MaterialSpinner
                            android:id="@+id/spinner_activation"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            app:ms_text_color="#605274" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_spinner"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="0dp">
                        <com.jaredrummler.materialspinner.MaterialSpinner
                            android:id="@+id/spinner_location"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            app:ms_text_color="#605274" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_spinner"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="0dp">
                        <com.jaredrummler.materialspinner.MaterialSpinner
                            android:id="@+id/spinner_product"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            app:ms_text_color="#605274" />
                    </LinearLayout>



                    <EditText
                        android:layout_marginTop="20dp"
                        android:id="@+id/edit_text_date"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:textSize="14dp"
                        android:background="@drawable/edit_text"
                        android:hint="@string/date" />

                    <EditText
                        android:layout_marginTop="20dp"
                        android:id="@+id/edit_text_product_quantity"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:textSize="14dp"
                        android:background="@drawable/edit_text"
                        android:hint="@string/product_quantity"
                        android:inputType="number"/>

                    <EditText
                        android:layout_marginTop="20dp"
                        android:id="@+id/edit_text_product_price"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:textSize="14dp"
                        android:background="@drawable/edit_text"
                        android:hint="@string/product_price"
                        android:inputType="number"/>

                    <EditText
                        android:layout_marginTop="20dp"
                        android:id="@+id/edit_text_base_volume"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:textSize="14dp"
                        android:background="@drawable/edit_text"
                        android:hint="@string/base_volume"
                        android:inputType="number"/>


                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <Button
                android:id="@+id/button_submit"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_border"
                android:text="SUBMIT"
                android:textColor="#409b13"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>